css/styles.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto", sans-serif;
  color: #434455;
  background-color: #fff;
}

ul,
ol {
  list-style-type: none;
  margin-block: 0;
  padding-left: 0;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin-block: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.container {
  max-width: 1158px;
  padding-left: 15px;
  padding-right: 15px;
  margin: 0 auto;
}

a {
  text-decoration: none;
  display: block;
}

.section {
  padding-block: 120px;
}

.page-header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow:
    0 1px 6px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16),
    0 2px 1px 0 rgba(46, 47, 66, 0.08);
}

.logo {
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.logo-part {
  color: #2e2f42;
}

.nav-list {
  display: flex;
  gap: 40px;
}

.contacts-list {
  display: flex;
  gap: 40px;
  margin-left: auto;
}

.header-nav {
  display: flex;
  align-items: center;
  gap: 76px;
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-link {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #2e2f42;
  display: block;
  padding-block: 24px;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-link.current {
  position: relative;
}

.nav-link.current::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -1px;
  width: 100%;
  height: 4px;
  background-color: #404bbf;
  border-radius: 2px;
}

.nav-link.current,
.nav-link:hover,
.nav-link:focus,
.contacts-link:hover,
.contacts-link:focus {
  color: #404bbf;
}

.contacts {
  font-style: normal;
}

.contacts-link {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero {
  background-color: #2e2f42;
  padding-block: 188px;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url(../images/hero_bg.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  max-width: 1440px;
  margin: 0 auto;
}

.hero-title {
  max-width: 496px;
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: #fff;
  margin: 0 auto;
  margin-bottom: 48px;
}

.hero-button {
  font-family: "Roboto", sans-serif;
  cursor: pointer;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #fff;
  border-radius: 4px;
  padding: 16px 32px;
  background-color: #4d5ae5;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  border: none;
  min-width: 169px;
  display: block;
  margin: 0 auto;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-button:hover,
.hero-button:focus {
  background-color:  #404bbf;
}


.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.features-list {
  display: flex;
  gap: 24px;
}

.features-item {
  width: calc((100% - 3 * 24px) / 4);
}

.features-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #8e8f99;
border-radius: 4px;
margin-bottom: 8px;
width: 264px;
height: 112px;
background: #f4f4fd;
}


.features-subtitle {
  margin-bottom: 8px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.features-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.team {
  background-color: #f4f4fd;
}

.team-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.team-item {
  background-color: #fff;
  max-width: 264px;
  width: calc((100% - 24px * 3) / 4);
  border-radius: 0 0 4px 4px;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-content {
  padding: 32px 16px;
  display: flex;
align-items: center;
justify-content: center;
flex-direction: column;
gap: 8px;
}

.team-member {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
}

.team-role {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
  color: #434455;
}

.team-image {
  max-width: 100%;
}

.team-soc-list {
  gap: 24px;
  margin-top: 8px;
}

.footer-soc-list {
  gap: 16px;
}

.team-soc-list,
.footer-soc-list {
  display: flex;
align-items: center;
justify-content: center;
list-style: none;
flex-direction: row;


}

.team-link,
.footer-link {
  display: flex;
align-items: center;
justify-content: center;
align-items: center;
  width: 40px;
  height: 40px;
  background-color: #4d5ae5;
  border-radius: 50%;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.team-icon,
.footer-icon
 {
  fill: #F4F4FD;
}



.team-link:hover,
.team-link:focus {
  background-color: #404bbf;
}



.footer-link:hover,
.footer-link:focus {
  background-color:#31d0aa;
}




.portfolio {
  padding-block: 120px;
}

.portfolio-list {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}

.portfolio-item {
  max-width: 360px;
  width: calc((100% - 24px * 2) / 3);
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}


.portfolio-item:hover {
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.portfolio-item:hover .portfolio-item-text{
  transform: translateY(0);
}

.portfolio-item-wraper {
  position: relative;
  overflow: hidden;
}

.portfolio-item-text {
  position: absolute;
  top: 0;
  left: 0;
  font-family: "Roboto", sans-serif;
font-weight: 400;
font-size: 16px;
line-height: 1.5;
letter-spacing: 0.02em;
color: #f4f4fd;
background-color: #4d5ae5;
width: 100%;
height: 100%;
padding: 40px 32px 40px 32px;
transform: translateY(100%);
transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-content {
  padding: 32px 16px;
  border-bottom: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;
  padding: 32px 16px;
}

.portfolio-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 72px;
}

.portfolio-subtitle {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.portfolio-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}
.page-footer {
  background-color: #2e2f42;
  padding-block: 100px;
}

.footer-logo-part {
  color: #f4f4fd;
}

.footer-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  max-width: 264px;
}

.footer-logo {
  margin-bottom: 16px;
}

.media-text {
  font-family: "Roboto", sans-serif;
font-weight: 500;
font-size: 16px;
line-height: 1.5;
letter-spacing: 0.02em;
color: #fff;
margin-bottom: 16px;
}


.footer{
    display: flex;
    align-items: baseline;
  gap: 120px;
  
}

.footer-media {
  max-width: 208px;
  height: 80px;
}

